--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <!-- Your own JavaScript functions go here    -->
     <!---------------------------------------------->
     <script src="./scripts/firebaseAPI_TEAM99.js"></script>
-    <script src="./scripts/skeleton.js"></script>
+    <script src="./scripts/skeleton.js" defer></script>
     <script src="./scripts/script.js"></script>
     <script>
         logout();       //make sure user is logged out
